--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+  "scripts": {
+    "start": "concurrently \"npm start --prefix backend\" \"npm start --prefix frontend\""
+  },
   "dependencies": {
     "axios": "^1.9.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2"
   }
 }
