--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
+    "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "multer": "^2.0.1",
     "pg": "^8.12.0",
